<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.exportacion.alimentos.applogisticsmanagement.Principal_Activity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/darker_gray"
        app:menu="@menu/navigation" >

    </android.support.design.widget.BottomNavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/contenedor_form_vertical"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_vendedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:enabled="true"
            android:text="@string/label_dni_vendedor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dniTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/label_nombres_vendedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_nombres_vendedor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nombreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_solicitud"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dni_clienteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:digits="1234567890"
        android:hint="@string/ingresar_dni_del_cliente"
        android:inputType="number"
        android:maxLength="8"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/validar_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/comenzar_venta"
        android:textColor="@android:color/background_light" />

</LinearLayout>
